--- a/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
+++ b/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
@@ -18,36 +18,15 @@
 	padding-left: 8px;
 }
 
-.i-orderedlayout-w2 .i-caption * { 
-	float:left; 
-	display: block;
-}
-.i-orderedlayout-w-e {
-	float:left; 	
-}
-	
-.i-orderedlayout-w2 .i-caption:after, .i-orderedlayout-w2:after {
+/* Placing error indicator right after the widget with empty caption */
+.i-orderedlayout-w:after, .i-orderedlayout-c:after {
   	content: ".";
 	display: block;
 	height: 0;
     clear: both;
     visibility: hidden;
 }
-		
-.i-orderedlayout-w2 .i-caption, .i-orderedlayout-w2 {
-	display: inline-block;
-}
-
-/* Hides from IE-mac \*/
-* html .i-orderedlayout-w2 .i-caption, * html .i-orderedlayout-w2 { height: 1%; }
-.i-orderedlayout-w2 .i-caption, .i-orderedlayout-w2 { display: block; }
-/* End hide from IE-mac */
-
-/*
-.i-errorindicator {
-	background:transparent url(../icons/16/error.png) no-repeat scroll right top;
-	height:16px;
-	width:10px;
-	margin-left: 3px;
-}
-*/
+.i-orderedlayout-c * { float:left; display: block;}
+.i-orderedlayout-w-e { float:left;}
+* html .i-orderedlayout-c, * html .i-orderedlayout-w { height: 1%; }
+.i-orderedlayout-c, .i-orderedlayout-w { display: block; }
