More extensive tests for #1902
svn changeset:5045 branch:trunk

--- a/WebContent/ITMILL/themes/tests-tickets/styles.css
+++ b/WebContent/ITMILL/themes/tests-tickets/styles.css
@@ -29,3 +29,11 @@
 .i-table-cell-content-young {
 	color: green;
 }
+
+/*****************************************************************************/
+/* Ticket 1902                                                               */
+/*****************************************************************************/
+
+.i-orderedlayout-red-background {
+	background: red;
+	}
