--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -697,7 +697,12 @@ input.i-modified,
 .i-Notification.system p {
 	white-space: nowrap;
 }
-.i-orderedlayout-margin-top {
+.
+/* Ordered layout spacing and margins are currently fixed.
+   This is considered to be a bug. For more info, see
+   http://dev.itmill.com/ticket/1904
+
+i-orderedlayout-margin-top {
 	padding-top: 15px;
 }
 .i-orderedlayout-margin-right {
@@ -716,6 +721,8 @@ input.i-modified,
 .i-orderedlayout-hspacing {
 	padding-left: 8px;
 }
+
+*/
 
 /* Placing error indicator right after the widget with empty caption */
 .i-orderedlayout-w:after, .i-orderedlayout-c:after {
