Test case and fix for #1924
svn changeset:5076 branch:trunk

--- a/WebContent/ITMILL/themes/tests-tickets/styles.css
+++ b/WebContent/ITMILL/themes/tests-tickets/styles.css
@@ -37,3 +37,12 @@
 .i-orderedlayout-red-background {
 	background: red;
 	}
+
+/*****************************************************************************/
+/* Ticket 1924                                                               */
+/*****************************************************************************/
+
+.i-label-red {
+	background: red;
+}
+	
