Minor modification to window header icon.
svn changeset:5105 branch:trunk

--- a/WebContent/ITMILL/themes/default/window/window.css
+++ b/WebContent/ITMILL/themes/default/window/window.css
@@ -43,7 +43,7 @@
 }
 
 .i-window-header .i-icon {
-	vertical-align: bottom;
+	vertical-align: middle; /* This has to be 'middle', not 'bottom', to allow larger icons than 16px */
 }
 
 
