--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -2134,7 +2134,7 @@ i-orderedlayout-margin-top {
 }
 
 .i-window-header .i-icon {
-	vertical-align: bottom;
+	vertical-align: middle; /* This has to be 'middle', not 'bottom', to allow larger icons than 16px */
 }
 
 
