Updated book tests: RichTestArea, Forms.
svn changeset:5111 branch:trunk

--- a/WebContent/ITMILL/themes/tests-book/styles.css
+++ b/WebContent/ITMILL/themes/tests-book/styles.css
@@ -9,6 +9,15 @@
 }
 
 /*****************************************************************************/
+/* For example_Forms()                                                       */
+/*****************************************************************************/
+.i-form {
+    border: thin solid;
+    padding: 5px 5px 5px 5px;
+}
+
+
+/*****************************************************************************/
 /* For example_Table()                                                       */
 /*****************************************************************************/
 /* Table rows contain three-row TextField components. */
