fixes #1960 (IE and disabled datefield) and removes odd usage of ITextField just to get proper style names
svn changeset:5129 branch:trunk

--- a/WebContent/ITMILL/themes/default/datefield/datefield.css
+++ b/WebContent/ITMILL/themes/default/datefield/datefield.css
@@ -192,3 +192,14 @@
 .i-datefield-rendererror .i-textfield {
 	background: #ff9999;
 }
+
+/* IE somehow loses generic i-disabled alpha. See #1960 */
+* html .i-disabled .i-datefield-button,
+* html .i-disabled .i-datefield-textfield {
+	filter: alpha(opacity=30);
+}
+*+ html .i-disabled .i-datefield-button,
+*+ html .i-disabled .i-datefield-textfield {
+	filter: alpha(opacity=30);
+}
+
