Fix for #124 Insert & remove row for GridLayout
svn changeset:5159 branch:trunk

--- a/WebContent/ITMILL/themes/tests-tickets/styles.css
+++ b/WebContent/ITMILL/themes/tests-tickets/styles.css
@@ -98,3 +98,10 @@
  	width: 100px;
  	height: 50px;
  }
+/*****************************************************************************/
+/* Ticket 124                                                               */
+/*****************************************************************************/
+
+.i-gridlayout-border td {
+	border: 1px solid black;
+}
