--- a/WebContent/ITMILL/themes/default/tabsheet/tabsheet.css
+++ b/WebContent/ITMILL/themes/default/tabsheet/tabsheet.css
@@ -5,14 +5,27 @@
 	text-align: left /* Force default alignment */
 }
 
-
 .i-tabsheet-tabs {
 	empty-cells: hide;
 	border-collapse: collapse;
+	margin:0;
+	padding:0;
+	border:0;
 	height: 38px;
 	background: transparent url(img/tabs-bg.png) repeat-x bottom left;
 	width: 100%;
 	overflow:hidden;
+}
+
+.i-tabsheet-tabs td {
+	margin:0;
+	padding:0;
+}
+
+.i-tabsheet-tabs .i-tabsheet-spacertd {
+	width: 100%;
+	height: 37px;
+	border: 1px solid #b6bbbc;
 }
 
 .i-tabsheet-hidetabs .i-tabsheet-tabcontainer {
@@ -72,17 +85,7 @@
 	white-space: nowrap;
 }
 
-.i-tabsheet-tabs .gwt-TabBarFirst {
-	display: none;
-}
-
-.i-tabsheet-tabs .gwt-TabBarRest {
-	border: 1px solid #b6bbbc;
-	background: #f8f9f9 url(img/tab-bg.png);
-	height: 37px;
-}
-
-.i-tabsheet-tabs .gwt-TabBarItem {
+.i-tabsheet-tabs .i-tabsheet-tabitem {
 	border: 1px solid #b6bbbc;
 	border-right: none;
 	height: 20px;
@@ -95,7 +98,7 @@
 	cursor: pointer;
 }
 
-.i-tabsheet-tabs .gwt-TabBarItem-selected {
+.i-tabsheet-tabs .i-tabsheet-tabitem-selected {
 	border: none;
 	background: transparent url(../panel/img/top-left.png) no-repeat;
 	margin: 0;
@@ -105,15 +108,15 @@
 	color: #ee5311;
 }
 
-.i-tabsheet-tabs .gwt-TabBarItem:hover {
+.i-tabsheet-tabs .i-tabsheet-tabitem:hover {
 	color: #4b5257;
 }
 
-.i-tabsheet-tabs .gwt-TabBarItem-selected:hover {
+.i-tabsheet-tabs .i-tabsheet-tabitem-selected:hover {
 	color: #ee5311;
 }
 
-.i-tabsheet-tabs .gwt-TabBarItem-selected .i-caption {
+.i-tabsheet-tabs .i-tabsheet-tabitem-selected .i-caption {
 	background: transparent url(../panel/img/top-right.png) repeat-x right top;
 	margin: 0 -1px 0 9px;
 	height: 18px;
@@ -150,7 +153,7 @@
 
 /* Progress indication */
 
-.i-tabsheet-loading .i-tabsheet-tabs .gwt-TabBarItem-selected span{
+.i-tabsheet-loading .i-tabsheet-tabs .i-tabsheet-tabitem-selected span{
 	background: transparent url(../common/img/ajax-loader.gif) no-repeat;
 	display: block;
 	margin-left: -10px;
@@ -176,7 +179,7 @@
 	height: 46px;
 }
 
-* html .i-tabsheet-tabs .gwt-TabBarItem-selected {
+* html .i-tabsheet-tabs .i-tabsheet-tabitem-selected {
 	border: 1px solid #babfc0;
 	border-bottom: none;
 	background: #fff;
@@ -186,7 +189,7 @@
 	cursor: default;
 	color: #ee5311;
 }
-*+html .i-tabsheet-tabs .gwt-TabBarItem-selected {
+*+html .i-tabsheet-tabs .i-tabsheet-tabitem-selected {
 	border: 1px solid #babfc0;
 	border-bottom: none;
 	background: #fff;
@@ -197,12 +200,12 @@
 	color: #ee5311;
 }
 
-* html .i-tabsheet-tabs .gwt-TabBarItem-selected .i-caption {
+* html .i-tabsheet-tabs .i-tabsheet-tabitem-selected .i-caption {
 	background: transparent;
 	padding: 0;
 	margin: 0;
 }
-*+html .i-tabsheet-tabs .gwt-TabBarItem-selected .i-caption {
+*+html .i-tabsheet-tabs .i-tabsheet-tabitem-selected .i-caption {
 	background: transparent;
 	padding: 0;
 	margin: 0;
