--- a/WebContent/ITMILL/themes/default/tabsheet/tabsheet.css
+++ b/WebContent/ITMILL/themes/default/tabsheet/tabsheet.css
@@ -11,7 +11,7 @@
 	margin:0;
 	padding:0;
 	border:0;
-	height: 38px;
+	height: 48px;
 	background: transparent url(img/tabs-bg.png) repeat-x bottom left;
 	width: 100%;
 	overflow:hidden;
@@ -20,12 +20,16 @@
 .i-tabsheet-tabs td {
 	margin:0;
 	padding:0;
+	vertical-align: bottom;
 }
 
-.i-tabsheet-tabs .i-tabsheet-spacertd {
+.i-tabsheet-spacertd {
 	width: 100%;
+}
+.i-tabsheet-spacertd div {
 	height: 37px;
 	border: 1px solid #b6bbbc;
+	background: transparent url(img/tab-bg.png);
 }
 
 .i-tabsheet-hidetabs .i-tabsheet-tabcontainer {
@@ -85,20 +89,27 @@
 	white-space: nowrap;
 }
 
-.i-tabsheet-tabs .i-tabsheet-tabitem {
+
+
+.i-tabsheet-tabitem {
 	border: 1px solid #b6bbbc;
 	border-right: none;
-	height: 20px;
-	padding: 9px 15px 8px 15px;
+	height: 37px;
+	padding: 0;
 	margin-top: 9px;
 	color: #777f85;
 	font-size: 15px;
-	line-height: 15px;
+	line-height: 18px;
 	background: #f8f9f9 url(img/tab-bg.png);
 	cursor: pointer;
 }
 
-.i-tabsheet-tabs .i-tabsheet-tabitem-selected {
+.i-tabsheet-tabitem .i-caption {
+	height: 20px;
+	padding: 9px 15px 8px 15px;
+}
+
+.i-tabsheet-tabitem-selected {
 	border: none;
 	background: transparent url(../panel/img/top-left.png) no-repeat;
 	margin: 0;
@@ -108,19 +119,19 @@
 	color: #ee5311;
 }
 
-.i-tabsheet-tabs .i-tabsheet-tabitem:hover {
+.i-tabsheet-tabitem:hover {
 	color: #4b5257;
 }
 
-.i-tabsheet-tabs .i-tabsheet-tabitem-selected:hover {
+.i-tabsheet-tabitem-selected:hover {
 	color: #ee5311;
 }
 
-.i-tabsheet-tabs .i-tabsheet-tabitem-selected .i-caption {
+.i-tabsheet-tabitem-selected .i-caption {
 	background: transparent url(../panel/img/top-right.png) repeat-x right top;
 	margin: 0 -1px 0 9px;
 	height: 18px;
-	padding: 16px 16px 0 7px
+	padding: 16px 16px 14px 7px
 }
 
 .i-tabsheet-content {
@@ -153,7 +164,7 @@
 
 /* Progress indication */
 
-.i-tabsheet-loading .i-tabsheet-tabs .i-tabsheet-tabitem-selected span{
+.i-tabsheet-loading .i-tabsheet-tabs .i-tabsheet-tabitem-selected span {
 	background: transparent url(../common/img/ajax-loader.gif) no-repeat;
 	display: block;
 	margin-left: -10px;
