API changes: Window.setResizable(boolean resizability) now allows to disable end-user sub-window resizing. Window.center() allows to request a sub-window to be centered on screen.
Improved theming capabilities for IWindow: window borders are now calculated dynamically for every sub-window instance, previously only one final static was specified.

svn changeset:5238 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -2280,6 +2280,11 @@ i-orderedlayout-margin-top {
 	background: transparent url(window/img/resize.png);
 }
 
+.i-window-resizebox-disabled {
+	cursor: default;
+	background: transparent;
+}
+
 .i-window-closebox {
 	position:absolute;
 	top: 33px;
@@ -2354,6 +2359,9 @@ i-orderedlayout-margin-top {
 	width: 15px;
 	height: 12px;
 	background: url(window/img/resize.png);
+}
+* html .i-window-resizebox-disabled {
+	background: transparent;
 }
 *+html .i-window-resizebox {
 	bottom: 0;
