Copied PopupView from incubator to trunk
svn changeset:5240 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -210,7 +210,6 @@ input.i-modified,
  	line-height: 13px;
  	font-family: arial, helvetica, tahoma, verdana, sans-serif;
 	color: #5d5444;
-	overflow: auto;
 }
 
 .i-tooltip-text {
@@ -218,6 +217,7 @@ input.i-modified,
 	border: none;
 	border-top: 1px solid #fffef5;
 	border-bottom: 1px solid #fbf8d9;
+	overflow: auto;
 }
 
 .i-tooltip .i-errormessage {
@@ -227,6 +227,7 @@ input.i-modified,
 	border: none;
 	border-top: 1px solid #fff3dc;
 	border-bottom: 1px solid #ead7b1;
+	overflow: auto;
  }
 
 .i-tooltip .i-errormessage h2 {
@@ -1034,6 +1035,17 @@ i-orderedlayout-margin-top {
 	overflow: hidden;
 	background: #c1c6cc;
 	border: none;
+}
+/*
+ * PopupView styles
+ */
+.i-popupview-popup{
+	border: 				1px solid #babfc0;
+	border-bottom: 			1px solid #dee2e3;
+	background-color:		white;
+	overflow: 				auto;
+	padding:				3px;
+	margin:					3px;
 }
 .i-progressindicator {
 	background: #dfe2e4 url(progressindicator/img/base.gif);
