--- a/WebContent/ITMILL/themes/tests-tickets/styles.css
+++ b/WebContent/ITMILL/themes/tests-tickets/styles.css
@@ -1,6 +1,34 @@
 @import url(../default/styles.css);
 
 /*****************************************************************************/
+/* Ticket 1904                                                               */
+/*****************************************************************************/
+
+.i-orderedlayout-ticket1904 {
+	background-color: red;
+}
+
+.i-orderedlayout-ticket1904-margin-top {
+	padding-top: 20px;
+}
+.i-orderedlayout-ticket1904-margin-right {
+	padding-right: 10px;
+}
+.i-orderedlayout-ticket1904-margin-bottom {
+	padding-bottom: 40px;
+}
+.i-orderedlayout-ticket1904-margin-left {
+	padding-left: 5px;
+}
+
+.i-orderedlayout-ticket1904-vspacing {
+	margin-top: 20px;
+}
+.i-orderedlayout-ticket1904-hspacing {
+	padding-left: 40px;
+}
+	
+/*****************************************************************************/
 /* Ticket 1710                                                               */
 /*****************************************************************************/
 
