Fixed #1904 : IOrderedLayout spacing and margincs should be specifiable in CSS
svn changeset:5245 branch:trunk

--- a/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
+++ b/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
@@ -1,9 +1,4 @@
-.
-/* Ordered layout spacing and margins are currently fixed.
-   This is considered to be a bug. For more info, see
-   http://dev.itmill.com/ticket/1904
-
-i-orderedlayout-margin-top {
+.i-orderedlayout-margin-top {
 	padding-top: 15px;
 }
 .i-orderedlayout-margin-right {
@@ -22,8 +17,6 @@ i-orderedlayout-margin-top {
 .i-orderedlayout-hspacing {
 	padding-left: 8px;
 }
-
-*/
 
 /* Placing error indicator right after the widget with empty caption */
 .i-orderedlayout-c * { float:left; display: block;}
