--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -783,12 +783,7 @@ input.i-modified,
 .i-Notification.system p {
 	white-space: nowrap;
 }
-.
-/* Ordered layout spacing and margins are currently fixed.
-   This is considered to be a bug. For more info, see
-   http://dev.itmill.com/ticket/1904
-
-i-orderedlayout-margin-top {
+.i-orderedlayout-margin-top {
 	padding-top: 15px;
 }
 .i-orderedlayout-margin-right {
@@ -807,8 +802,6 @@ i-orderedlayout-margin-top {
 .i-orderedlayout-hspacing {
 	padding-left: 8px;
 }
-
-*/
 
 /* Placing error indicator right after the widget with empty caption */
 .i-orderedlayout-c * { float:left; display: block;}
