Disabled components now look disabled in IE as well. Fixes #2012
svn changeset:5268 branch:trunk

--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -52,6 +52,12 @@
 	opacity: 0.3;
 	filter: Alpha(opacity=30);
 }
+* html .i-disabled {
+	zoom: 1;
+}
+*+html .i-disabled {
+	zoom: 1;
+}
 .i-disabled .i-disabled {
 	opacity: 1.0;
 	filter: Alpha(opacity=100);
