re-built styles
svn changeset:5269 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -176,8 +176,15 @@
 	opacity: 0.3;
 	filter: Alpha(opacity=30);
 }
+* html .i-disabled {
+	zoom: 1;
+}
+*+html .i-disabled {
+	zoom: 1;
+}
 .i-disabled .i-disabled {
 	opacity: 1.0;
+	filter: Alpha(opacity=100);
 }
 .i-required-field-indicator {
 	padding-left:2px;
