FIxes #1992 with a 'magic' (static, really) number.
svn changeset:5287 branch:trunk

--- a/WebContent/ITMILL/themes/default/slider/slider.css
+++ b/WebContent/ITMILL/themes/default/slider/slider.css
@@ -10,6 +10,7 @@
 }
 
 .i-slider-base {
+	/* changing the borders will require adjustments to ISlider.java */
 	height: 2px;
 	border-top: 1px solid #cbcdce;
 	background: #f3f3f4;
