Fixed a typo in tabsheet.css (missing semicolon).
svn changeset:5296 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1481,6 +1481,7 @@ input.i-modified,
 }
 
 .i-slider-base {
+	/* changing the borders will require adjustments to ISlider.java */
 	height: 2px;
 	border-top: 1px solid #cbcdce;
 	background: #f3f3f4;
@@ -1998,7 +1999,7 @@ input.i-modified,
 	background: transparent url(panel/img/top-right.png) repeat-x right top;
 	margin: 0 -1px 0 9px;
 	height: 18px;
-	padding: 16px 16px 14px 7px
+	padding: 16px 16px 14px 7px;
 }
 
 .i-tabsheet-content {
