--- a/WebContent/ITMILL/themes/default/tabsheet/tabsheet.css
+++ b/WebContent/ITMILL/themes/default/tabsheet/tabsheet.css
@@ -131,7 +131,7 @@
 	background: transparent url(../panel/img/top-right.png) repeat-x right top;
 	margin: 0 -1px 0 9px;
 	height: 18px;
-	padding: 16px 16px 14px 7px
+	padding: 16px 16px 14px 7px;
 }
 
 .i-tabsheet-content {
