--- a/WebContent/ITMILL/themes/default/accordion/accordion.css
+++ b/WebContent/ITMILL/themes/default/accordion/accordion.css
@@ -5,14 +5,17 @@
 }
 
 .i-accordion-item-caption {
-	height: 24px;
-	padding: 7px 0 0 18px;
+	height: 31px;
 	overflow: hidden;
 	white-space: nowrap;
 	background: #edf0f0 url(../tabsheet/img/tab-bg.png);
 	font-size: 15px;
 	color: #656d73;
 	border-top: 1px solid #c8cccd;
+}
+
+.i-accordion-item-caption .i-caption {
+	padding: 7px 0 6px 18px;
 	cursor: pointer;
 }
 
@@ -21,8 +24,11 @@
 	background: #d5dee2 url(img/selected-bg.png);
 	border-top-color: #cbd7de;
 	border-bottom-color: #bfc9d4;
-	cursor: default;
 	text-shadow: #fafafa 1px 1px 0;
+}
+
+.i-accordion-item-open .i-accordion-item-caption .i-caption {
+	cursor: default;
 }
 
 .i-accordion-item-content {
